# ClipForge

.devcontainer/: devcontainer.json
.github/: renovate.json
backend/: Cargo.toml  build.rs
backend/src/: api.rs  embed.rs  main.rs  streaming.rs
core/: Cargo.toml
frontend/: astro.config.mjs  bun.lockb  package.json
frontend/src/: App.tsx
frontend/src/components/: Card.astro  VideoPlayer.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
