[package]
name = "clip-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
env_logger = "0.11.3"
rust-embed = "8.4.0"
mime_guess = "2.0.3"

[profile.release]
panic = "abort"     # Strip expensive panic clean-up logic
codegen-units = 1   # Compile crates one after another so the compiler can optimize better
lto = true          # Enables link to optimizations
opt-level = "s"     # Optimize for binary size
strip = true        # Remove debug symbols