[package]
name = "clip-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
actix-files = "0.6.6"
actix-cors = "0.7.0"
env_logger = "0.11.3"
log = "0.4.21"
rust-embed = "8.4.0"
mime_guess = "2.0.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio-stream = "0.1.15"

[profile.release]
panic = "abort"     # Strip expensive panic clean-up logic
codegen-units = 1   # Compile crates one after another so the compiler can optimize better
lto = true          # Enables link to optimizations
opt-level = "s"     # Optimize for binary size
strip = true        # Remove debug symbols